--- a/.github/workflows/sync_to_hub.yml
+++ b/.github/workflows/sync_to_hub.yml
@@ -17,4 +17,5 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/memebrain/Aira main
+          HF_USERNAME: ${{ secrets.HF_USERNAME }}
+        run: git push https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/memebrain/Aira main
